--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"express": "^4.17.1",
 		"express-ejs-layouts": "^2.5.0",
 		"method-override": "^3.0.0",
-		"mongoose": "5.11.15"
+		"mongoose": "^5.12.0"
 	},
 	"devDependencies": {
 		"dotenv": "^8.2.0",
