--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
 	},
 	"license": "MIT",
 	"dependencies": {
-		"body-parser": "^1.19.0",
 		"ejs": "^3.1.6",
 		"express": "^4.17.1",
 		"express-ejs-layouts": "^2.5.0",
 		"method-override": "^3.0.0",
-		"mongoose": "^5.12.0"
+		"mongoose": "^5.12.0",
+		"morgan": "^1.10.0"
 	},
 	"devDependencies": {
 		"dotenv": "^8.2.0",
