--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 /.env
+/.env-dont-send
 /.envlocal
 /node_modules
 /yarn-error.log
 /yarn.lock
-/notes.md
-/test.html
-/test.js
+/notesandstuff
+/logs
